--- a/MediaButler.Common/MediaButler.Common.csproj
+++ b/MediaButler.Common/MediaButler.Common.csproj
@@ -68,6 +68,7 @@
       <HintPath>..\packages\Newtonsoft.Json.6.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Services.Client" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -88,11 +89,17 @@
     <Compile Include="ButlerRequest.cs" />
     <Compile Include="ButlerResponse.cs" />
     <Compile Include="Configuration.cs" />
+    <Compile Include="HostWatcher\BlobUtilities.cs" />
+    <Compile Include="HostWatcher\BlobWatcher.cs" />
+    <Compile Include="HostWatcher\JobManager.cs" />
+    <Compile Include="HostWatcher\MediaButlerWatcherHost.cs" />
+    <Compile Include="HostWorkflow\ConfigurationData.cs" />
+    <Compile Include="HostWorkflow\MediaButlerHost.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceAccess\BlobManagerFactory.cs" />
     <Compile Include="ResourceAccess\BlobStorageManager.cs" />
-    <Compile Include="ResourceAccess\EncoderSupport.cs" />
     <Compile Include="ResourceAccess\IBlobStorageManager.cs" />
+    <Compile Include="ResourceAccess\EncoderSupport.cs" />
     <Compile Include="ResourceAccess\IEncoderSupport.cs" />
     <Compile Include="workflow\ChainRequest.cs" />
     <Compile Include="workflow\ProcessHandler.cs" />
@@ -104,6 +111,7 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
