--- a/MediaButlerWebJobHost/packages.config
+++ b/MediaButlerWebJobHost/packages.config
@@ -5,6 +5,7 @@
   <package id="Microsoft.Data.Edm" version="5.6.2" targetFramework="net452" />
   <package id="Microsoft.Data.OData" version="5.6.2" targetFramework="net452" />
   <package id="Microsoft.Data.Services.Client" version="5.6.2" targetFramework="net452" />
+  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.9" targetFramework="net452" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="2.0.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="System.Spatial" version="5.6.2" targetFramework="net452" />
