--- a/MediaButler.Common/MediaButler.Common.csproj
+++ b/MediaButler.Common/MediaButler.Common.csproj
@@ -98,8 +98,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceAccess\BlobManagerFactory.cs" />
     <Compile Include="ResourceAccess\BlobStorageManager.cs" />
+    <Compile Include="ResourceAccess\jsonKeyValue.cs" />
     <Compile Include="ResourceAccess\IBlobStorageManager.cs" />
     <Compile Include="ResourceAccess\EncoderSupport.cs" />
+    <Compile Include="ResourceAccess\IjsonKeyValue.cs" />
     <Compile Include="ResourceAccess\IEncoderSupport.cs" />
     <Compile Include="workflow\ChainRequest.cs" />
     <Compile Include="workflow\ProcessHandler.cs" />
