--- a/MediaButler.Common/MediaButler.Common.csproj
+++ b/MediaButler.Common/MediaButler.Common.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceAccess\BlobManagerFactory.cs" />
     <Compile Include="ResourceAccess\BlobStorageManager.cs" />
+    <Compile Include="ResourceAccess\IdotControl.cs" />
     <Compile Include="ResourceAccess\jsonKeyValue.cs" />
     <Compile Include="ResourceAccess\IBlobStorageManager.cs" />
     <Compile Include="ResourceAccess\EncoderSupport.cs" />
