--- a/MediaButlerWebJobHost/MediaButlerWebJobHost.csproj
+++ b/MediaButlerWebJobHost/MediaButlerWebJobHost.csproj
@@ -119,6 +119,87 @@
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="encodingdefinitions\AAC Audio.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\AAC Good Quality Audio.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Multiple Bitrate 1080p Audio 5.1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Multiple Bitrate 1080p.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Multiple Bitrate 16x9 for iOS.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Multiple Bitrate 16x9 SD Audio 5.1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Multiple Bitrate 16x9 SD.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Multiple Bitrate 4K Audio 5.1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Multiple Bitrate 4K.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Multiple Bitrate 4x3 for iOS.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Multiple Bitrate 4x3 SD Audio 5.1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Multiple Bitrate 4x3 SD.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Multiple Bitrate 720p Audio 5.1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Multiple Bitrate 720p.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Single Bitrate 1080p Audio 5.1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Single Bitrate 1080p.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Single Bitrate 16x9 SD Audio 5.1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Single Bitrate 16x9 SD.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Single Bitrate 4K Audio 5.1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Single Bitrate 4K.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Single Bitrate 4x3 SD Audio 5.1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Single Bitrate 4x3 SD.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Single Bitrate 720p Audio 5.1.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Single Bitrate 720p for Android.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Single Bitrate 720p.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Single Bitrate High Quality SD for Android.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="encodingdefinitions\H264 Single Bitrate Low Quality SD for Android.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="packages.config">
       <SubType>Designer</SubType>
     </None>
@@ -132,95 +213,6 @@
       <Project>{569bf3bd-00fc-4d58-831e-50fad2c22cda}</Project>
       <Name>MediaButler.Common</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="encodingdefinitions\AAC Good Quality Audio.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Adaptive Bitrate MP4 Set 1080p.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Adaptive Bitrate MP4 Set 720p.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Adaptive Bitrate MP4 Set SD 16x9.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Adaptive Bitrate MP4 Set SD 4x3.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Broadband 1080p.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Broadband 720p.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Broadband SD 16x9.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Broadband SD 4x3.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Smooth Streaming 1080p.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Smooth Streaming 720p for 3G or 4G.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Smooth Streaming 720p Xbox Live ADK.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Smooth Streaming 720p.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Smooth Streaming SD 16x9.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Smooth Streaming SD 4x3.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\H264 Smooth Streaming Windows Phone 7 Series.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\MediaPackager_MP4ToSmooth.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\MediaPackager_SmoothToHLS.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\Thumbnails.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\VC1 Broadband 1080p.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\VC1 Broadband 720p.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\VC1 Broadband SD 16x9.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\VC1 Broadband SD 4x3.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\VC1 Smooth Streaming 1080p.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\VC1 Smooth Streaming 720p Xbox Live ADK.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\VC1 Smooth Streaming 720p.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\VC1 Smooth Streaming SD 16x9.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\VC1 Smooth Streaming SD 4x3.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="encodingdefinitions\WMA High Quality Audio.xml">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
