Add new Steps: 1. Delete current asset 2. Select asset by processID Update 1. Add Event on job error to capture more details 2. FIX 1. WorkflowName becouse  if you only send  control file, was always null. 2. Poison message state -400 when the process definition is worng

--- a/MediaButler.BaseProcess/MediaButler.BaseProcess.csproj
+++ b/MediaButler.BaseProcess/MediaButler.BaseProcess.csproj
@@ -117,8 +117,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Base\CreateSasLocatorStep.cs" />
+    <Compile Include="Base\DeleteCurrentAssetStep.cs" />
     <Compile Include="Base\DeleteOriginalBlobStep.cs" />
     <Compile Include="Base\SetupAMSAccountStep.cs" />
+    <Compile Include="miscellaneous\ListAssetFilesOnRequestLogStep.cs" />
+    <Compile Include="miscellaneous\SelectAssetByProcessIDStep.cs" />
     <Compile Include="PremiunEncoder\PremiunConfig.cs" />
     <Compile Include="PremiunEncoder\PremiunEncoderStep.cs" />
     <Compile Include="Protection\EnableAESEncryptionStep.cs" />
