--- a/MediaButlerWebJobHost/App.config
+++ b/MediaButlerWebJobHost/App.config
@@ -3,11 +3,11 @@
   <connectionStrings>
     <!-- The format of the connection string is "DefaultEndpointsProtocol=https;AccountName=NAME;AccountKey=KEY" -->
     <!-- For local execution, the value can be set either in this config file or through environment variables -->
-    <add name="AzureWebJobsDashboard" connectionString="" />
-    <add name="AzureWebJobsStorage" connectionString="" />
+    <add name="AzureWebJobsDashboard" connectionString="DefaultEndpointsProtocol=https;AccountName=XXX;AccountKey=XXX==" />
+    <add name="AzureWebJobsStorage" connectionString="DefaultEndpointsProtocol=https;AccountName=XXX;AccountKey=XXX==" />
   </connectionStrings>
   <appSettings>
-    <add key="MediaButler.ConfigurationStorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName=mediabutlerdevstorage;AccountKey=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX" />
+    <add key="MediaButler.ConfigurationStorageConnectionString" value="DefaultEndpointsProtocol=https;AccountName=XXX;AccountKey=XXX==" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <startup>
@@ -17,19 +17,23 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.WindowsAzure.Storage" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.3.0.0" newVersion="4.3.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-6.2.0.0" newVersion="6.2.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.6.2.0" newVersion="5.6.2.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
