--- a/MediaButler.Common/MediaButler.Common.csproj
+++ b/MediaButler.Common/MediaButler.Common.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceAccess\BlobManagerFactory.cs" />
     <Compile Include="ResourceAccess\BlobStorageManager.cs" />
+    <Compile Include="ResourceAccess\IJobConfiguration.cs" />
     <Compile Include="ResourceAccess\jsonKeyValue.cs" />
     <Compile Include="ResourceAccess\IButlerStorageManager.cs" />
     <Compile Include="ResourceAccess\EncoderSupport.cs" />
